<resources>
    <string name="app_name">Aplicativo</string>
    <string name="entrar">Entrar</string>
    <string name="text_cadastro">Não tem cadastro? Clique aqui</string>
    <string name="title_cadastro">Cadastre-se</string>
    <string name="nome">Nome</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="todo">TODO</string>
    <string name="title_activity_controlador_menu">ControladorMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email">E-mail</string>
    <string name="Senha">Senha</string>
    <string name="Entrar">Entrar</string>


</resources>