<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaCadastro">

    <ImageView
        android:id="@+id/clever_softwares"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/title_cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:text="@string/title_cadastro"
        android:textColor="@color/grey"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/ContainerComponents"
        style="@style/ContainerComponents"
        android:layout_marginStart="90dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_cadastrar" />

    <EditText
        android:id="@+id/edit_nome"
        style="@style/Edit_text"
        android:hint="@string/nome"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="@id/ContainerComponents"
        app:layout_constraintStart_toStartOf="@id/ContainerComponents"
        app:layout_constraintEnd_toEndOf="@id/ContainerComponents"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_email"
        style="@style/Edit_text"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:drawableEnd="@drawable/ic_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_nome"
        app:layout_constraintStart_toStartOf="@id/ContainerComponents"
        app:layout_constraintEnd_toEndOf="@id/ContainerComponents"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_senha"
        style="@style/Edit_text"
        android:hint="@string/senha"
        android:inputType="numberPassword"
        android:drawableEnd="@drawable/ic_eye"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"
        app:layout_constraintStart_toStartOf="@id/ContainerComponents"
        app:layout_constraintEnd_toEndOf="@id/ContainerComponents"
        android:autofillHints="" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_cadastrar"
        style="@style/button"
        android:text="@string/cadastrar"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@id/ContainerComponents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>